--- a/models/4_marts/marts_sales/dim_credit_card.yml
+++ b/models/4_marts/marts_sales/dim_credit_card.yml
@@ -21,5 +21,5 @@ models:
         tests:  
           - not_null
 
-      - name: businessentityid
+      - name: business_entity_id
         description: "Número de identificação da entidade comercial. Chave estrangeira para Person.BusinessEntityID."
